<resources>
    <string name="app_name">GameDay</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="skip">Skip</string>
    <string name="create">Create professional sport cards on different occasions</string>
    <string name="share">Share the card with your friends or fans via social networks</string>
    <string name="onbarding">Let everybody know about the upcoming football event</string>
    <string name="enter">ENTER</string>
    <string name="gallery">OPEN\nGALLERY</string>
    <string name="take_photo">TAKE A\nPHOTO</string>
    <string name="cancel">Cancel</string>
    <string name="cards">CARDS</string>
    <string name="next">Next</string>
    <string name="match">MATCH OF THE DAY</string>
    <string name="effects">EFFECTS</string>
    <string name="edit">EDIT</string>
    <string name="error_connection">No internet connection</string>
    <string name="back">Back</string>
    <string name="try_again">Try again</string>
    <string name="reset">Reset</string>
    <string name="nav_notify">Notification</string>
    <string name="nav_share">Share your feedback</string>
    <string name="nav_rate">Rate #gameday</string>
    <string name="nav_water">Hide watermark</string>
    <string name="nav_restore">RESTORE PURCHASE</string>
    <string name="nav_purchase">PURCHASE</string>
    <string name="slogan">Arbeit macht frei</string>
    <string name="first_splash_sentences">Create fancy posts without any help of designer and at no cost</string>
    <string name="second_splash_sentences">Get proud of social media content you present to the world</string>
    <string name="third_splash_sentences">Become more engaging with your followers</string>
    <string name="fourth_splash_sentences">Increase your social awareness</string>
    <string name="layout">LAYOUT</string>
    <string name="filter">FILTER</string>
    <string name="adjust">ADJUST</string>
    <string name="font">Font</string>
    <string name="color">Color</string>
    <string name="drop_shadow">Drop shadow</string>
    <string name="gameday">GameDay</string>
    <string name="gameday_hashtag">#Gameday</string>
    <string name="_new">New</string>
    <string name="gamedayapp_hashtag">#Gamedayapp</string>
    <string name="image_template">Image Template</string>
    <string name="full_image">Full Image</string>
    <string name="clear_all">Clear all</string>
    <string name="add_elements">Add elements</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="sharpness">Sharpness</string>
    <string name="saturation">Saturation</string>
    <string name="highlight_shadow">Shadow</string>
    <string name="white_balance">Temperature</string>
    <string name="gaussian_blur">Gaussian blur</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_page_layout">LAYOUT</string>
    <string name="name_page_share">SHARE</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more">MORE</string>
    <string name="add_logo">ADD LOGO</string>
    <string name="add_place">ADD PLACE</string>
    <string name="add_headline">ADD HEADLINE</string>
    <string name="title_select_app">Select a program to share:</string>
    <string name="dialog_alert_discard_message">This will discard all changes made in current card and get you to start screen</string>
    <string name="dialog_alert_discard_title">Cancel changes?</string>
    <string name="dialog_alert_delete_all_element">Do you want to delete all elements?</string>
    <string name="dialog_alert_error_connection">Please check your WIFI or cellular data network.</string>
    <string name="dialog_alert_purchase">Do you want to hide watermark for $3.99 ?</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="text">Text</string>
    <string name="team">Team</string>
    <string name="vs">Vs</string>
    <string name="editing_tips">Editing Tips</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="edit_text">TEXT EDIT</string>
    <string name="headline">Headline</string>
    <string name="logo">Logo</string>
    <string name="background">Background</string>
    <string name="team_logo">team logo</string>
    <string name="text_char">text</string>
    <string name="date_char">date</string>
    <string name="time_char">time</string>
    <string name="place_char">place</string>
    <string name="text_one_logo">1 logo</string>
    <string name="text_two_logos">2 logos</string>
    <string name="text_two_logos_vs">2 logos + vs</string>
    <string name="hint_search">Type in team</string>
    <string name="Delete">Delete</string>
    <string name="Fill_element">Fill element</string>
    <string name="rotate_and_resize">Rotate and resize</string>
</resources>