<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include
        layout="@layout/activity_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/main_menu_second_page_divider"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_screen"
            android:paddingRight="@dimen/padding_screen"
            android:showDividers="beginning|middle">


            <TextView
                android:id="@+id/navigation_share"
                style="@style/FieldSettingMenu.DrawableEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_share" />

            <TextView
                android:id="@+id/navigation_rate"
                style="@style/FieldSettingMenu.DrawableEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_rate" />

            <TextView
                android:id="@+id/editing_tips"
                style="@style/FieldSettingMenu.DrawableEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editing_tips" />

            <TextView
                android:id="@+id/terms_and_conditions"
                style="@style/FieldSettingMenu.DrawableEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions" />


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/navBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/action_button_size"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:background="@drawable/button_background"


                    android:text="@string/nav_purchase"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    style="@style/FieldSettingMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_water" />

            </RelativeLayout>

            <TextView
                android:id="@+id/navigation_restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_smallest"
                android:text="@string/nav_restore"
                android:textColor="#a0a0a0"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>