<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/margin_small"
    android:paddingLeft="@dimen/margin_small"
    android:paddingRight="@dimen/margin_small"
    android:paddingStart="@dimen/margin_small"
    android:layout_marginBottom="2dp">

    <ImageView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"

        />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/tvTitleLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/team_logo"
        android:textColor="@drawable/selector_red_color" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/text_char"
        android:textColor="@drawable/selector_red_color" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/date_char"
        android:textColor="@drawable/selector_red_color" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/time_char"
        android:textColor="@drawable/selector_red_color" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/tvPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/place_char"
        android:textColor="@drawable/selector_red_color" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.2" />

</LinearLayout>