<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_above="@+id/textView"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:text="@string/Delete"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"

        android:text="@string/Fill_element"/>

    <ImageView
        android:id="@+id/textView"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/el_2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"

        android:text="@string/rotate_and_resize"/>
</RelativeLayout>