<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editFlowLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/flTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
            android:id="@+id/tvBack"
            style="@style/TextFontStyle"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/back"
            android:textColor="@drawable/selector_red_color"
            app:fontId="8" />

        <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
            android:id="@+id/tv_mode"
            style="@style/TextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="@string/name_page_layout" />

        <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
            android:id="@+id/tv_new"
            style="@style/TextFontStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/_new"
            android:textColor="@drawable/selector_red_color"

            app:fontId="8" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flTop"
        android:adjustViewBounds="true"
        android:contentDescription="@string/full_image"
        android:minHeight="200dp"
        android:minWidth="200dp"
        android:scaleType="centerCrop" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/surfaceView">

        <LinearLayout
            android:id="@+id/button_share_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="@dimen/margin_biggest"
            android:layout_marginStart="@dimen/margin_biggest"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_photo_camera_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/instagram" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_share_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_arrow_downward_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/save"
                android:textAllCaps="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_share_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/margin_biggest"
            android:layout_marginRight="@dimen/margin_biggest"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_more_horiz_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/more" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>