<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/padding_medium"
    android:paddingRight="@dimen/padding_medium"
    android:paddingStart="@dimen/padding_medium"
    android:paddingLeft="@dimen/padding_medium"
    android:orientation="horizontal">

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_5"
        android:text="@string/layout"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_5"
        android:text="@string/filter" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_5"
        android:text="@string/adjust" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

</merge>