<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/flTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
            android:id="@+id/tv_cancel"
            style="@style/TextFontStyle"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/cancel"
            android:textColor="@drawable/selector_red_color"
            app:fontId="7" />

        <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
            android:id="@+id/tv_save"
            style="@style/TextFontStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/save"
            android:textColor="@drawable/selector_red_color"
            app:fontId="7" />

        <com.llc111minutes.gameday.ui.widget.owner.CustomFontTextView
            android:id="@+id/tv_mode"
            style="@style/TextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/date" />
    </RelativeLayout>


    <DatePicker
        android:id="@+id/dp_datePicker"
        style="@android:style/Widget.DatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:datePickerMode="spinner"
        android:visibility="visible" />

    <TimePicker
        android:id="@+id/tp_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:timePickerMode="spinner"
        android:visibility="visible" />
</FrameLayout>